changes on the report
Addition of table.

--- a/review.ipynb
+++ b/review.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -74,27 +74,132 @@
        "      <td>1,177,609</td>\n",
        "      <td>27,247</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>ORANGE COUNTY</td>\n",
+       "      <td>1,030,185</td>\n",
+       "      <td>12,994</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>SAN DIEGO CA</td>\n",
+       "      <td>959,307</td>\n",
+       "      <td>69,995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>PHOENIX AZ</td>\n",
+       "      <td>943,999</td>\n",
+       "      <td>6,133</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>DALLAS TX</td>\n",
+       "      <td>942,908</td>\n",
+       "      <td>22,157</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>ATLANTA GA</td>\n",
+       "      <td>814,885</td>\n",
+       "      <td>24,701</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>DENVER CO</td>\n",
+       "      <td>754,233</td>\n",
+       "      <td>12,421</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>AUSTIN TX</td>\n",
+       "      <td>698,371</td>\n",
+       "      <td>14,978</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>SEATTLE WA</td>\n",
+       "      <td>671,238</td>\n",
+       "      <td>25,063</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>TUCSON AZ</td>\n",
+       "      <td>631,442</td>\n",
+       "      <td>5,712</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>SAN FRANCISCO CA</td>\n",
+       "      <td>629,591</td>\n",
+       "      <td>213,609</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>SACRAMENTO CA</td>\n",
+       "      <td>545,776</td>\n",
+       "      <td>7,044</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>PITTSBURGH PA</td>\n",
+       "      <td>542,085</td>\n",
+       "      <td>3,643</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>WASHINGTON DC</td>\n",
+       "      <td>418,859</td>\n",
+       "      <td>127,001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>NASHVILLE TN</td>\n",
+       "      <td>327,225</td>\n",
+       "      <td>9,270</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>BOSTON MA</td>\n",
+       "      <td>248,968</td>\n",
+       "      <td>80,021</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             City Population    Users\n",
-       "0     NEW YORK NY  8,405,837  302,149\n",
-       "1      CHICAGO IL  1,955,130  164,468\n",
-       "2  LOS ANGELES CA  1,595,037  144,132\n",
-       "3        MIAMI FL  1,339,155   17,675\n",
-       "4  SILICON VALLEY  1,177,609   27,247"
+       "                City Population    Users\n",
+       "0        NEW YORK NY  8,405,837  302,149\n",
+       "1         CHICAGO IL  1,955,130  164,468\n",
+       "2     LOS ANGELES CA  1,595,037  144,132\n",
+       "3           MIAMI FL  1,339,155   17,675\n",
+       "4     SILICON VALLEY  1,177,609   27,247\n",
+       "5      ORANGE COUNTY  1,030,185   12,994\n",
+       "6       SAN DIEGO CA    959,307   69,995\n",
+       "7         PHOENIX AZ    943,999    6,133\n",
+       "8          DALLAS TX    942,908   22,157\n",
+       "9         ATLANTA GA    814,885   24,701\n",
+       "10         DENVER CO    754,233   12,421\n",
+       "11         AUSTIN TX    698,371   14,978\n",
+       "12        SEATTLE WA    671,238   25,063\n",
+       "13         TUCSON AZ    631,442    5,712\n",
+       "14  SAN FRANCISCO CA    629,591  213,609\n",
+       "15     SACRAMENTO CA    545,776    7,044\n",
+       "16     PITTSBURGH PA    542,085    3,643\n",
+       "17     WASHINGTON DC    418,859  127,001\n",
+       "18      NASHVILLE TN    327,225    9,270\n",
+       "19         BOSTON MA    248,968   80,021"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "city = pd.read_csv(r'E:\\dataglacier\\DataSets\\City.csv')\n",
-    "city.head()"
+    "city"
    ]
   },
   {
